svc-nodeport-flaskhello.yaml
apiVersion: v1
kind: Service
metadata:
        name: flask-hello
spec:
        type: NodePort
        ports:
                - protocol: TCP
                  port: 5000
                  targetPort: 5000
        selector:
                app: flask-hello

---

apiVersion: apps/v1
kind: Deployment
metadata:
        name: flask-hello-deploy
spec:
        selector:
                matchLabels:
                        app: flask-hello
        replicas: 2
        template:
                metadata:
                        name: flask-hello
                        labels:
                                app: flask-hello
                spec:
                        containers:
                        - name: hello-flask
                          image: myubuntu:flask-hello
                          imagePullPolicy: Never
                          ports:
                          - containerPort: 5000
