ingress-flaskhello.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
        name: flask-hello-ingress
        annotations:
                nginx.ingress.kubernetes.io/rewrite-target: /
spec:
        rules:
        - http:
                  paths:
                  - path: /flask-hello
                    pathType: Prefix
                    backend:
                            service:
                                    name: flask-hello
                                    port:
                                            number: 5000
